--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -11,7 +11,8 @@
     {% for key in data.0.keys %}
         <th>{{ key }}</th>
     {% endfor %}
-        <th>Progress</th>
+        <th>Today</th>
+        <th>Last week</th>
     </tr>
 {% for row in data %}
     <tr>
@@ -22,6 +23,11 @@
             {% if row.xtras.jira_summary %}
                 {{ row.xtras.jira_summary.pct_complete|percentage }} ({{ row.xtras.jira_summary.complete }}/{{ row.xtras.jira_summary.total }})
             {% endif %}
+        </td>
+        <td>
+          {% if row.xtras.week_ago_summary %}
+                {{ row.xtras.week_ago_summary.pct_complete|percentage }} ({{ row.xtras.week_ago_summary.complete }}/{{ row.xtras.week_ago_summary.total }})
+          {% endif %}
         </td>
     </tr>
 {% endfor %}
