Get static files working when DEBUG is on

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -1,6 +1,12 @@
 {% load tz %}
+{% load staticfiles %}
 {% load dashboard_tags %}
 <html>
+
+<head>
+  <link rel="stylesheet" type="text/css" src="{% static "dashboard/foo.css" %}" />
+</head>
+
 <body>
 
 <table>
