--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -41,8 +41,9 @@
           {% for key in data.0.keys %}
               <th>{{ key }}</th>
           {% endfor %}
-              <th>Today</th>
-              <th>Last week</th>
+              <th data-orderable="false" data-search="false">&nbsp;</th>
+              <th data-orderable="false" data-search="false">Today</th>
+              <th data-orderable="false" data-search="false">Last week</th>
           </tr>
         </thead>
         <tbody>
@@ -52,8 +53,13 @@
                 <td>{{ value }}</td>
                 {% endfor %}
                 <td>
+                  {% if row.xtras.jira_summary %}
+                    <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}" title="View JIRA filter"><span class="glyphicon glyphicon-th-list"></span></a>
+                  {% endif %}
+                </td>
+                <td>
                     {% if row.xtras.jira_summary %}
-                      {{ row.xtras.jira_summary.pct_complete|percentage }} <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}">({{ row.xtras.jira_summary.complete }}/{{ row.xtras.jira_summary.total }})</a>
+                      {{ row.xtras.jira_summary.pct_complete|percentage }} ({{ row.xtras.jira_summary.complete }}/{{ row.xtras.jira_summary.total }})
                     {% endif %}
                 </td>
                 <td>
@@ -74,6 +80,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <!-- datatables -->
     <script src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"></script>
 
     <script type="text/javascript">
     $(document).ready(function() {
