--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -57,9 +57,17 @@
                     <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}" title="View JIRA filter"><span class="glyphicon glyphicon-th-list"></span></a>
                   {% endif %}
                 </td>
-                <td>
+                <td {% if row.xtras.jira_summary_errors %}class="danger"{% endif %}>
                     {% if row.xtras.jira_summary %}
                       {{ row.xtras.jira_summary.pct_complete|percentage }} ({{ row.xtras.jira_summary.complete }}/{{ row.xtras.jira_summary.total }})
+                    {% endif %}
+                    {% if row.xtras.jira_summary_errors %}
+                      <dl>
+                        <dt>Errors:</dt>
+                        {% for error in row.xtras.jira_summary_errors %}
+                        <dd>{{ error }}</dd>
+                        {% endfor %}
+                      </dl>
                     {% endif %}
                 </td>
                 <td>
