Add a test for our existing tag.

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -41,7 +41,7 @@
           {% for key in data.0.keys %}
               <th>{{ key }}</th>
           {% endfor %}
-              <th data-orderable="false" data-search="false">&nbsp;</th>
+              <th data-orderable="false" data-search="false">JIRA</th>
               <th data-orderable="false" data-search="false">Today</th>
               <th data-orderable="false" data-search="false">Last week</th>
           </tr>
