--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -42,9 +42,22 @@
               <th>{{ key }}</th>
           {% endfor %}
               <th data-orderable="false" data-search="false">JIRA</th>
-              <th data-orderable="false" data-search="false">Today</th>
-              <th data-orderable="false" data-search="false">Last week</th>
+              <th data-orderable="false" data-search="false" colspan="2">
+                Today
+              </th>
+              <th data-orderable="false" data-search="false" colspan="2">Last week</th>
           </tr>
+          <tr>
+            {% for key in data.0.keys %}
+                <th>&nbsp;</th>
+            {% endfor %}
+            <th>&nbsp;</th>
+            <th>Complete</th>
+            <th>Scope</th>
+            <th>Complete</th>
+            <th>Scope</th>
+          </tr>
+
         </thead>
         <tbody>
         {% for row in data %}
@@ -57,24 +70,24 @@
                     <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}" title="View JIRA filter"><span class="glyphicon glyphicon-th-list"></span></a>
                   {% endif %}
                 </td>
-                <td {% if row.xtras.jira_summary_errors %}class="danger"{% endif %}>
-                    {% with current=row.xtras.jira_summary previous=row.xtras.week_ago_summary %}
-                    {% progress_report current previous %}
-                    {% endwith %}
-                    {% if row.xtras.jira_summary_errors %}
-                      <dl>
-                        <dt>Errors:</dt>
-                        {% for error in row.xtras.jira_summary_errors %}
-                        <dd>{{ error }}</dd>
-                        {% endfor %}
-                      </dl>
-                    {% endif %}
+                {% if row.xtras.jira_summary_errors %}
+                <td class="danger" colspan="2">
+                  <dl>
+                    <dt>Errors:</dt>
+                    {% for error in row.xtras.jira_summary_errors %}
+                    <dd>{{ error }}</dd>
+                    {% endfor %}
+                  </dl>
                 </td>
-                <td>
-                  {% with current=row.xtras.week_ago_summary previous=None %}
+                {% else %}
+                  {% with current=row.xtras.jira_summary previous=row.xtras.week_ago_summary %}
                   {% progress_report current previous %}
                   {% endwith %}
-                </td>
+                {% endif %}
+
+                {% with current=row.xtras.week_ago_summary previous=None %}
+                {% progress_report current previous %}
+                {% endwith %}
             </tr>
         {% endfor %}
       </tbody>
