--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -98,19 +98,17 @@
     <script src="//cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"></script>
 
     <script type="text/javascript">
-    jQuery.extend({
-        getQueryParameters : function(str) {
-          return (str || document.location.search).replace(/(^\?)/,'').split("&").map(function(n){return n = n.split("="),this[n[0]] = n[1],this}.bind({}))[0];
-        }
-    });
     $(document).ready(function() {
-      var query_params = $.getQueryParameters();
+      var hash = window.location.hash;
       $('#projects').DataTable({
         "lengthMenu": [[-1, 5, 10, 15, 20], ["All", 5, 10, 15, 20]]
       });
-      if ("filter" in query_params){
-        $('#projects').DataTable().search(query_params['filter']).draw();
+      if (hash){
+        $('#projects').DataTable().search(hash).draw();
       }
+      $('#projects_filter input').on('keyup', function(){
+        window.location.hash = this.value;
+      })
     });
     </script>
   </body>
