--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -42,6 +42,7 @@
               <th rowspan="2">{{ key }}</th>
           {% endfor %}
               <th data-orderable="false" data-search="false" rowspan="2">JIRA</th>
+              <th date-orderable="false" data-search="false" rowspan="2">Days remaining</th>
               <th data-orderable="false" data-search="false" colspan="2">Today</th>
               <th data-orderable="false" data-search="false" colspan="2">Last week</th>
           </tr>
@@ -63,6 +64,11 @@
                   {% if row.xtras.jira_summary %}
                     <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}" title="View JIRA filter"><span class="glyphicon glyphicon-filter"></span></a>
                   {% endif %}
+                </td>
+                <td>
+                {% if row.xtras.predictions %}
+                  {{ row.xtras.predictions.0 }} - {{ row.xtras.predictions.1 }}
+                {% endif %}
                 </td>
                 {% if row.xtras.jira_summary_errors %}
                 <td class="danger" colspan="2">
