--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -66,7 +66,7 @@
                   {% endif %}
                 </td>
                 <td>
-                {% if row.xtras.predictions %}
+                {% if row.xtras.predictions and row.xtras.jira_summary.pct_complete < 1 and row.xtras.predictions.0 > 0 %}
                   {{ row.xtras.predictions.0 }} - {{ row.xtras.predictions.1 }}
                 {% endif %}
                 </td>
