--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -38,7 +38,7 @@
           <td>
             {% if row.xtras.jira_summary %}
               <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}" title="View JIRA filter"><span class="glyphicon glyphicon-filter"></span></a>
-              <a href="{% url 'history' row.xtras.jira_summary.filter_id %}" title="View forecast"><span class="glyphicon glyphicon-calendar"></span></a>
+              <a href="{% url 'forecast' row.xtras.jira_summary.filter_id %}" title="View forecast"><span class="glyphicon glyphicon-calendar"></span></a>
             {% endif %}
           </td>
           <td>
