--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -11,9 +11,9 @@
 
 <div class="col-md-6" style="padding-left: 0px">
   <h2>Forecasts</h2>
-  {% for days, percentiles in forecasts.items %}
+  {% for days, forecast in forecasts.items %}
   <table class="table table-striped table-bordered table-hover table-condensed" id="forecasts">
-    <caption>Based on the last {{ days }} days performance</caption>
+    <caption>Based on the last {{ days }} days performance with {{ forecast.scope }} tickets remaining</caption>
     <thead class="thead">
       <tr>
         <th>Percentile</th>
@@ -22,40 +22,46 @@
     </thead>
     <tbody>
       <tr>
-        <td>95th</td><td>{{ percentiles.2 }}</td>
+        <td>95th</td><td>{{ forecast.percentiles.2 }}</td>
       </tr>
       <tr>
-        <td>75th</td><td>{{ percentiles.1 }}</td>
+        <td>75th</td><td>{{ forecast.percentiles.1 }}</td>
       </tr>
       <tr>
-        <td>95th</td><td>{{ percentiles.0 }}</td>
+        <td>50th</td><td>{{ forecast.percentiles.0 }}</td>
       </tr>
     </tbody>
   </table>
   {% endfor %}
+
+  <table class="table table-striped table-bordered table-hover table-condensed" id="project_history">
+    <caption>Progress over past {{ recent_history|length }} days</caption>
+      <thead class="thead">
+        <tr>
+          <th>Date</th>
+          <th>Completed that day</th>
+          <th>Total complete</th>
+          <th>Scope</th>
+          <th>Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for history in recent_history %}
+        <tr>
+          <td>{{ history.0 }}</td>
+          <td>{{ history.1 }}</td>
+          <td>{{ history.2 }}</td>
+          <td>{{ history.3 }}</td>
+          <td>{{ history.4|percentage }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+  </table>
+
 </div>
 
 <div class="col-md-6" style="padding-right: 0px">Other Half here</div>
 
 
-<table class="table table-striped table-bordered table-hover table-condensed" id="project_history">
-  <caption>Progress over past 90 days</caption>
-    <thead class="thead">
-      <tr>
-        <th>Date</th>
-        <th>Complete</th>
-        <th>Total</th>
-        <th>Progress</th>
-      </tr>
-    </thead>
-    <tbody>
-    {% for summary in filter_summaries %}
-      <tr>
-        <td>{{ summary.created_on }}</td>
-        <td>{{ summary.complete }}</td>
-        <td>{{ summary.total }}</td>
-        <td>{{ summary.pct_complete|percentage }}</td>
-    {% endfor %}
-    </tbody>
-</table>
+
 {% endblock content %}
