--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -13,7 +13,7 @@
   <h2>Forecasts</h2>
   {% for days, forecast in forecasts.items %}
   <table class="table table-striped table-bordered table-hover table-condensed" id="forecasts">
-    <caption>Based on the last {{ days }} days performance with {{ forecast.scope }} tickets remaining</caption>
+    <caption>Based on the last <strong>{{ days }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong></caption>
     <thead class="thead">
       <tr>
         <th>Percentile<sup>1</sup></th>
@@ -33,7 +33,7 @@
       <tr>
         <td colspan="3">
           <small>
-            <sup>1</sup> N percent of 10,000 simulations completed this fast or faster<br />
+            <sup>1</sup> Percentage of 10,000 simulations completed this fast or faster<br />
             <sup>2</sup> Nearest Friday
           </small>
         </td>
