--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script src="{% static "dashboard/node_modules/chartist-plugin-legend/chartist-plugin-legend.js" %}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
