--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -71,10 +71,55 @@
 <div class="col-md-6" style="padding-right: 0px">
   <div class="ct-chart ct-perfect-fourth"></div>
   <style type="text/css">
-  .ct-series-a .ct-line, .ct-series-a .ct-point{
-  /* Set the colour of this series line */
-  stroke: #3B916A;
-  }
+    .ct-series-a .ct-line, .ct-series-a .ct-point {
+      /* Set the colour of this series line */
+      stroke: #3B916A;
+    }
+    .ct-series-b .ct-line, .ct-series-b .ct-point {
+      stroke: #f05b4f;
+    }
+    .ct-legend {
+        position: relative;
+        z-index: 10;
+        list-style: none;
+        text-align: left;
+        padding: 25px 0 0 50px;
+    }
+    .ct-legend li {
+        position: relative;
+        padding-left: 15px;
+        cursor: pointer;
+    }
+    .ct-legend li:before {
+      width: 12px;
+      height: 12px;
+      position: absolute;
+      left: 0;
+      top: 5px;
+      content: '';
+      border: 3px solid transparent;
+      border-radius: 2px;
+    }
+    .ct-legend li.inactive:before {
+      background: transparent;
+    }
+    .ct-legend.ct-legend-inside {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+    .ct-legend.ct-legend-inside li{
+      display: block;
+      margin: 0;
+    }
+    .ct-legend .ct-series-0:before {
+      background-color: #3B916A;
+      border-color: #3B916A;
+    }
+    .ct-legend .ct-series-1:before {
+      background-color: #f05b4f;
+      border-color: #f05b4f;
+    }
   </style>
   <script type="text/javascript">
   var data = {
@@ -95,7 +140,12 @@
   var options = {
     axisY: {
       onlyInteger: true,
-    }
+    },
+    plugins: [
+        Chartist.plugins.legend({
+            className: 'crazyPink'
+        })
+    ]
   }
 
   // Create a new line chart object where as first parameter we pass in a selector
