--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -41,7 +41,7 @@
             {% endif %}
           </td>
           <td>
-            {% if row.xtras.predictions %}
+            {% if row.xtras.jira_summary %}
               <a href="{% url 'forecast' row.xtras.jira_summary.filter_id %}" title="View forecast"><span class="glyphicon glyphicon-calendar"></span></a>
             {% endif %}
           </td>
