--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -10,10 +10,15 @@
 
 
 <div class="col-md-6" style="padding-left: 0px">
-  <h2>Forecasts</h2>
+  <h2>Forecast</h2>
+  {% if not forecasts %}
+  <div class="alert alert-warning">
+    Not enough data to make a forecast.
+  </div>
+  {% endif %}
   {% for days, forecast in forecasts.items %}
   <table class="table table-striped table-bordered table-hover table-condensed" id="forecasts">
-    <caption>Based on the last <strong>{{ days }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong></caption>
+    <caption>Based on at most the past <strong>{{ days }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong></caption>
     <thead class="thead">
       <tr>
         <th>Percentile<sup>1</sup></th>
@@ -42,8 +47,8 @@
   </table>
   {% endfor %}
 
+  <h2>Progress over past {{ recent_history|length }} days</h2>
   <table class="table table-striped table-bordered table-hover table-condensed" id="project_history">
-    <caption>Progress over past {{ recent_history|length }} days</caption>
       <thead class="thead">
         <tr>
           <th>Date</th>
