--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -18,7 +18,15 @@
   {% endif %}
   {% for days, forecast in forecasts.items %}
   <table class="table table-striped table-bordered table-hover table-condensed" id="forecasts">
-    <caption>Based on at most the past <strong>{{ days }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong></caption>
+    <caption>
+      Based on at most the past <strong>{{ days }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong>
+    </caption>
+    {% if forecast.actual_scope != forecast.scope %}
+    <caption class="alert alert-warning">
+      {% with forecast.actual_scope|subtract:forecast.scope as ticket_diff %}This simulation assumes <strong>you {% if ticket_diff < 0 %}add{% else %}remove{% endif %} {{ ticket_diff|absvalue }} tickets</strong>.{% endwith %}
+      There are actually {{ forecast.actual_scope }} tickets remaining.<br />
+    </caption>
+    {% endif %}
     <thead class="thead">
       <tr>
         <th>Percentile<sup>1</sup></th>
