--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -19,7 +19,7 @@
   {% for days, forecast in forecasts.items %}
   <table class="table table-striped table-bordered table-hover table-condensed" id="forecasts">
     <caption>
-      Based on at most the past <strong>{{ days }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong>
+      Based on the past <strong>{{ recent_history|length }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong>
     </caption>
     {% if forecast.actual_scope != forecast.scope %}
     <caption class="alert alert-warning">
@@ -55,33 +55,10 @@
   </table>
   {% endfor %}
 
-  <h2>Progress over past {{ recent_history|length }} days</h2>
-  <table class="table table-striped table-bordered table-hover table-condensed" id="project_history">
-      <thead class="thead">
-        <tr>
-          <th>Date</th>
-          <th>Completed that day</th>
-          <th>Total complete</th>
-          <th>Scope</th>
-          <th>Progress</th>
-        </tr>
-      </thead>
-      <tbody>
-      {% for history in recent_history %}
-        <tr>
-          <td>{{ history.0 }}</td>
-          <td>{{ history.1 }}</td>
-          <td>{{ history.2 }}</td>
-          <td>{{ history.3 }}</td>
-          <td>{{ history.4|percentage }}</td>
-        </tr>
-      {% endfor %}
-      </tbody>
-  </table>
-
 </div>
 
 <div class="col-md-6" style="padding-right: 0px">
+  <h2>Progress over past {{ recent_history|length }} days</h2>
   <div class="ct-chart ct-perfect-fourth"></div>
   <style type="text/css">
     .ct-series-a .ct-line, .ct-series-a .ct-point {
@@ -166,6 +143,28 @@
   // is the actual data object.
   new Chartist.Line('.ct-chart', data, options);
   </script>
+  <table class="table table-striped table-bordered table-hover table-condensed" id="project_history">
+      <thead class="thead">
+        <tr>
+          <th>Date</th>
+          <th>Completed that day</th>
+          <th>Total complete</th>
+          <th>Scope</th>
+          <th>Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for history in recent_history %}
+        <tr>
+          <td>{{ history.0 }}</td>
+          <td>{{ history.1 }}</td>
+          <td>{{ history.2 }}</td>
+          <td>{{ history.3 }}</td>
+          <td>{{ history.4|percentage }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+  </table>
 
 </div>
 
