Add tool tips to main dashboard % display

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -65,6 +65,9 @@
         var new_hash = encodeURIComponent(this.value);
         window.location.hash = new_hash;
       })
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
     });
     </script>
   </body>
