--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -19,7 +19,7 @@
     {% for days, forecast in forecasts.items %}
     <table class="table table-striped table-bordered table-hover table-condensed" id="forecasts">
       <caption>
-        Based on the past <strong>{{ recent_history|length }} days</strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong>
+        Based on the past <strong>{{ recent_history|length }} days<sup>1</sup></strong> performance with <strong>{{ forecast.scope }} tickets remaining</strong>
       </caption>
       {% if forecast.actual_scope != forecast.scope %}
       <caption class="alert alert-warning">
@@ -29,8 +29,8 @@
       {% endif %}
       <thead class="thead">
         <tr>
-          <th>Percentile<sup>1</sup></th>
-          <th>Forecasted end date<sup>2</sup></th>
+          <th>Percentile<sup>2</sup></th>
+          <th>Forecasted end date<sup>3</sup></th>
         </tr>
       </thead>
       <tbody>
@@ -46,8 +46,9 @@
         <tr>
           <td colspan="3">
             <small>
-              <sup>1</sup> Percentage of 10,000 simulations completed this fast or faster<br />
-              <sup>2</sup> Nearest Friday
+              <sup>1</sup> Forecasts are ignorant of company holidays, team team off, etc. Take into account when communicating.<br />
+              <sup>2</sup> Percentage of 10,000 simulations completed this fast or faster<br />
+              <sup>3</sup> Nearest Friday
             </small>
           </td>
         </tr>
