--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -16,10 +16,10 @@
     {% for key in data.0.keys %}
         <th rowspan="2">{{ key }}</th>
     {% endfor %}
-        <th data-orderable="false" data-search="false" rowspan="2">JIRA</th>
-        <th data-orderable="false" data-search="false" rowspan="2">Forecast</th>
+        <th data-orderable="false" data-search="false" rowspan="2">Forecast<sup>1</sup></th>
         <th data-orderable="false" data-search="false" colspan="2">Today</th>
         <th data-orderable="false" data-search="false" colspan="2">Last week</th>
+        <th data-orderable="false" data-search="false" rowspan="2">Filter</th>
     </tr>
     <tr>
       <th>Complete</th>
@@ -29,6 +29,13 @@
     </tr>
 
   </thead>
+  <tfoot>
+    <tr>
+      <td colspan="{{ data.0.keys|length|add:"6" }}">
+        <sup>1</sup>Based on up to the past <strong>30 days</strong> performance with the current <strong>number of tickets remaining</strong>, <strong>95%</strong> of 10,000 simulations <strong>completed this fast or faster</strong>
+      </td>
+    </tr>
+  </tfoot>
   <tbody>
   {% for row in data %}
       <tr>
@@ -36,13 +43,8 @@
           <td>{{ value }}</td>
           {% endfor %}
           <td>
-            {% if row.xtras.jira_summary %}
-              <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}" title="View JIRA filter"><span class="glyphicon glyphicon-filter"></span></a>
-            {% endif %}
-          </td>
-          <td>
-            {% if row.xtras.jira_summary %}
-              <a href="{% url 'forecast' row.xtras.jira_summary.filter_id %}" title="View forecast"><span class="glyphicon glyphicon-calendar"></span></a>
+            {% if row.xtras.predictions %}
+              <a href="{% url 'forecast' row.xtras.jira_summary.filter_id %}" title="View forecast"><span class="glyphicon glyphicon-calendar"></span></a> {{ row.xtras.predictions.2|week_ending|date:"n/j" }} 
             {% endif %}
           </td>
           {% if row.xtras.jira_summary_errors %}
@@ -63,6 +65,12 @@
           {% with current=row.xtras.week_ago_summary previous=None %}
           {% progress_report current previous %}
           {% endwith %}
+
+          <td>
+            {% if row.xtras.jira_summary %}
+              <a href="{{ JIRA_URL }}/secure/IssueNavigator.jspa?mode=hide&amp;requestId={{ row.xtras.jira_summary.filter_id }}" title="View JIRA filter"><span class="glyphicon glyphicon-filter"></span></a>
+            {% endif %}
+          </td>
       </tr>
   {% endfor %}
 </tbody>
