Add tooltips to forecast charts

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -21,8 +21,11 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="{% static "dashboard/node_modules/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.css" %}">
+
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="{% static "dashboard/node_modules/chartist-plugin-legend/chartist-plugin-legend.js" %}"></script>
+    <script src="{% static "dashboard/node_modules/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js" %}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
