--- a/dashboard/templates/forecast.html
+++ b/dashboard/templates/forecast.html
@@ -168,6 +168,10 @@
     plugins: [
         Chartist.plugins.legend({
             className: 'crazyPink'
+        }),
+        Chartist.plugins.tooltip({
+          anchorToPoint: true,
+          appendToBody: true
         })
     ]
   }
